Build 32 (?)
- Units now can die and buildings now can be destroyed
- Added explosion effects for existing units
- Few attacking bugs fixed

Build 31 (26.02.2013)
- Added mouse panning. It disabled by default, in order to enable it, go to "Special" tab
- Shooting sound optimizations
- Big structural change in unit object class
- Construction Rig don't need to move to the middle of the building site to start building
- Attacking unit can pursue it's target
- Pathfinding algorithm improved, units now can find alternative position to move if target position is occupied by another unit
- Weapons finally cause damage. (Units still can't be killed)

Build 30 (20.02.2013)
- Removed div selection when clicking many time on unit box on right panel
- Ability to pause game, by pressing P key.
- Added dialog module, when game paused corresponding dialog is appeared

Build 29 (12.02.2013)
- Added shadow for all buildings
- Added shadow for units. Unfortunately can't find shadow image for Freighter, for now it will be without shadow. 
- Added healing cursor
- Added damage table. Preparing for weapon implementation.
- Added small horizontal bridge building. Still can't correctly build it, some improvements required for pathfinding algorithm.
- Small code optimizations

Build 28 (06.02.2013)
- Preloading right panel images for buildings and units
- Do not start game load until start screen is loaded completely
- Added animation to Advanced Training Facility building
- Added Field Hospital building (it still can't heal)
- Added shadow layer to graphic drawer
- Added shadows for all Headquarter buildings

Build 27 (16.12.2012)
- Freighter automatically choose only nearest objects
- Energy indicator blinking implemented by CSS animation
- Added water indicator
- You can urgently sell water by clicking on indicator
- When selecting construction rig right panel automatically switch to build section

Build 26 (11.12.2012)
- Freighter now can harvest